# keebs-rs

./: Cargo.toml  README.md  memory.x  notes.md
.cargo/: config.toml
ataro_v0.2/: README.md  ataro_v0.2.kicad_dru  ataro_v0.2.kicad_pcb  ataro_v0.2.kicad_prl  ataro_v0.2.kicad_pro  ataro_v0.2.kicad_sch  ataro_v0.2.step  fp-info-cache  todo.md  truth-watcher_symbol.kicad_mod
ataro_v0.2/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: main.rs
